--- a/nodejspaymentlink/values.yaml
+++ b/nodejspaymentlink/values.yaml
@@ -1,4 +1,4 @@
-# Default values for app-ui.
+# Default values for nodejspaymentlink.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 name: nodejspaymentlink
