workflow call added

--- a/.github/workflows/nodejspaymentlink.yml
+++ b/.github/workflows/nodejspaymentlink.yml
@@ -3,9 +3,17 @@ on:
   push:
     branches:
       - DevOps
+      - master
   pull_request:
     branches: 
       - DevOps
+      - master
+  workflow_call:
+    secrets: 
+      AWS_ACCESS_KEY_ID:
+        required: true
+      AWS_SECRET_ACCESS_KEY:
+        required: true
   schedule:
   - cron: '* * * * *'
 jobs:
@@ -13,11 +21,12 @@ jobs:
     runs-on: ubuntu-latest
     env: 
       MODULE_NAME: nodejspaymentlink
-    permissions:
-      contents: read
-      packages: write
+
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+        with:
+          repository: 'niranjanmaradapu/nodejspaymentlink'
+          ref: DevOps
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1 
       - name: Set up Docker Buildx
@@ -40,11 +49,12 @@ jobs:
     runs-on: ubuntu-latest   
     env: 
       MODULE_NAME: nodejspaymentlink
-    permissions:
-      contents: read
-      packages: write
+
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+        with:
+          repository: 'niranjanmaradapu/nodejspaymentlink'
+          ref: DevOps
       - name: AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
